' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package auto.entity {
  class "type AutoTyp = 'KLEINWAGEN' | 'TRANSPORTER' | 'CABRIO'" as AutoTyp
  hide AutoTyp circle

  class "type Marke = 'AUDI' | 'PORSCHE' | 'VW'" as Marke
  hide Marke circle

  class Auto <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly modell: string
    @Column() readonly kilometerstand: number
    @Column() readonly typ: AutoTyp
    @Column() readonly marke: Marke
    @Column() readonly preis: number
    @Column() readonly baujahr: Date
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Schlagwort <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: string
    @Column() readonly schlagwort: string
    @ManyToOne() readonly auto: Auto
  }

  Auto ..> Entity
  Auto *--> "*" Schlagwort : @OneToMany() schlagwoerter
  Auto .up.> AutoTyp
  Auto .up.> Marke

  AutoTyp .[hidden].> Marke
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
